# nextsyncengine

./: .gitignore  Cargo.toml  README.md  filesystem.py  helpers.py  logging_config.py  main.py  media.py  nextcloud_api.py  requirements.txt  test.py
.github/workflows/: rust.yml
src/: filesystem.rs  helpers.rs  main.rs  media.rs  nextcloud.rs
src/tests/: mod.rs  nextcloud.rs
src/upload/: common.rs  mod.rs  sorted.rs  unsorted.rs
